[package]
name = "stattracker"
version = "0.1.0"
edition = "2021"

# Define the information on the binaries
[[bin]]
name = "stattracker"
path = "src/bin/stattracker.rs"

[dependencies]
# General dependencies
read-process-memory = "0.1.6"
sysinfo = "0.30.12"

# Egui and its dependencies
egui = { version = "0.27.2", features = ["persistence"] }
eframe = { version = "0.27.2", default-features = false, features = [
    "default_fonts",
    "glow",
] }
