[package]
name = "stattracker"
version = "0.1.2"
rust-version = "1.76"
edition = "2021"


# Define the information on the binaries
[[bin]]
name = "stattracker"
path = "src/bin/stattracker.rs"

[dependencies]
# General dependencies
read-process-memory = "0.1.6"
sysinfo = "0.30.12"
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
serde = { version = "1.0.203", features = ["derive"] }

# Egui and its dependencies
egui = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
